# murano-repository

./: .gitignore  .gitreview  AUTHORS  ChangeLog  MANIFEST.in  README.md  README.rst  archiver.py  consts.py  main.py  manifest.py  openstack-common.conf  parser.py  requirements.txt  setup-centos.sh  setup.cfg  setup.py  setup.sh  setupV2.sh  test-requirements.txt  test.py  tox.ini
Services/: ad-manifest.yaml  asp-net-farm-manifest.yaml  asp-net-manifest.yaml  demo-manifest.yaml  iis-farm-manifest.yaml  iis-manifest.yaml  mssql-cluster-manifest.yaml  mssql-manifest.yaml  test-manifest .yaml
Services/agent_templates/: CreatePrimaryDC.template  DeployWebApp.template
Services/heat_templates/: Demo.template  Linux.template  LoadBalancer.template  SQLCluster.template
Services/scripts/: TelnetDeploy.sh
Services/ui_forms/: Demo.yaml.orig
Services/workflows/: AD.xml  Demo.xml  LinuxTelnet.xml  Networking.xml
api/: v1.py
cmd/: run.py
etc/: murano-repository.conf  murano-repository.conf.sample
etc/init.d/: README.rst  murano-repository-debian  murano-repository-el6  murano-repository-redhat
etc/murano/: murano-repository.conf  murano-repository.conf.sample
metadata_service/: config.py  main.py
metadata_service/cmd/: run.py
metadata_service/etc/: murano-repository.conf
metadata_service/utils/: archiver.py  parser.py
muranorepository/: config.py  consts.py  main.py  manifest.py  service_metadata.tar
muranorepository/Services/: activeDirectory-manifest.yaml  ad-manifest.yaml  apache-manifest.yaml  asp-net-manifest.yaml  aspNetApp-manifest.yaml  aspNetAppFarm-manifest.yaml  demo-manifest.yaml  demoService-manifest.yaml  iis-farm-manifest.yaml  iis-manifest.yaml  linuxApacheService-manifest.yaml  linuxTelnetService-manifest.yaml  msSqlClusterServer-manifest.yaml  msSqlServer-manifest.yaml  mssql-cluster-manifest.yaml  mssql-manifest.yaml  (+5 more)
(+183 files in other folders)
